--- a/story.yaml
+++ b/story.yaml
@@ -13,6 +13,10 @@ characters:
       inside: TODO
       history: TODO
 settings:
+  - 主人公は、４５歳独身、軽犯罪で生計を立てる。空き家に住んでいる。
+  - オカンはスマートスピーカーに入っている。メモリが少ないので、ちょっとぼけた感じになっている。
+  - アリスは捨てられたアンドロイド。回収と破壊を避けてうろうろしている。自立していて依存心がない。
+  - 主人公はアリスに充電を少しだけおごっている。
   - いつどこで: TODO
   - だれがなにをする: TODO
   - ITEM:
